--- a/la sale/views/editprofile.hbs
+++ b/la sale/views/editprofile.hbs
@@ -19,7 +19,7 @@
             <div class="row">
                 <div class="col-md-5"> 
                     <!-- Profile Picture goes here -->
-                    <img src="https://scontent.fmnl4-6.fna.fbcdn.net/v/t1.0-9/48411393_2570480286301230_4225061867124424704_n.jpg?_nc_cat=107&_nc_ohc=pwaNt8PslLwAX9jqLua&_nc_ht=scontent.fmnl4-6.fna&oh=ae8e9e4c9ef965155caad04093272e3f&oe=5EBC2548" class="rounded-circle" id="profilepic">
+                    <img src={{{imgsrc}}} class="rounded-circle" id="profilepic">
                 </div>
                 <div class="col-md-7" id="textdetails">
                     <div class="row">
