--- a/la sale/views/listing.hbs
+++ b/la sale/views/listing.hbs
@@ -42,9 +42,18 @@
 		<div class="row">
 			<div class="col">
 			<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-				<div class="carousel-inner">
+				<div class="carousel-inner" id="x">
+					<script> var x=0;</script>
 					{{#each photo}}
-						<div class="carousel-item active">
+						<script>
+							if(x==0) {
+								$("#id").append("<div class=\"carousel-item active\">");
+							}
+							else {
+								$("#id").append("<div class=\"carousel-item\">");
+							}
+							x++;
+						</script>
 						<img src={{{img}}} class="d-block w-100" alt="...">
 						</div>
 					{{/each}}
