--- a/la sale/views/listing.hbs
+++ b/la sale/views/listing.hbs
@@ -45,7 +45,7 @@
 				<div class="carousel-inner">
 					{{#each photo}}
 						<div class="carousel-item active">
-						<img src={{{img}}} class="d-block w-100" alt="...">
+						<img src="{{{img}}}" class="d-block w-100" alt="...">
 						</div>
 					{{/each}}
 				</div>
