--- a/la sale/views/listing.hbs
+++ b/la sale/views/listing.hbs
@@ -52,10 +52,10 @@
 							else {
 								$("#id").append("<div class=\"carousel-item\">");
 							}
-							x++;
 						</script>
 						<img src={{{img}}} class="d-block w-100" alt="...">
 						</div>
+						<script>x++; </script>
 					{{/each}}
 				</div>
 				<a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
