--- a/la sale/views/listing.hbs
+++ b/la sale/views/listing.hbs
@@ -46,16 +46,19 @@
 					<script> var x=0;</script>
 					{{#each photo}}
 						<script>
+
 							if(x==0) {
-								$("#id").append("<div class=\"carousel-item active\">");
+								$("#x").append("<div class=\"carousel-item active\"> <img src={{{img}}} class=\"d-block w-100\" alt=\"...\">");
 							}
 							else {
-								$("#id").append("<div class=\"carousel-item\">");
+								$("#x").append("<div class=\"carousel-item\"> <img src={{{img}}} class=\"d-block w-100\" alt=\"...\">");
 							}
+								$("#x").append("</div>");
+							x++;
 						</script>
-						<img src={{{img}}} class="d-block w-100" alt="...">
-						</div>
-						<script>x++; </script>
+						
+						
+			
 					{{/each}}
 				</div>
 				<a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
