--- a/la sale/views/mylistings.hbs
+++ b/la sale/views/mylistings.hbs
@@ -107,21 +107,24 @@
         <div class="row">
             <div class="col-md-2"></div>
             <div class="col-md-8">
-                <div id="pinnedlistingscarousel" class="carousel slide" data-ride="carousel">
+                <div id="participationlistingscarousel" class="carousel slide" data-ride="carousel">
                     <div class="carousel-inner" id="pl">
                             <script> x=0; var j=0; </script>
                                 {{#each plisting}}
                                 <script> 
                                     if (x%2==0 && j==0){
-                                        $("#pl").append("<div class=\"carousel-item active\"> <div class=\"row\"> <div class=\"col-md partItemLeft\">")
+                                        var html = "<div class=\"carousel-item active\"> <div class=\"row\"> <div class=\"col-md partItemLeft\">"
+                                        $("#pl").append(html);
                                     }
 
                                     else if(x%2==0){
-                                        $("#pl").append("</div> </div> <div class=\"carousel-item\"> <div class=\"row\"> <div class=\"col-md partItemLeft\"> ")
+                                        var html = "</div> </div> <div class=\"carousel-item\"> <div class=\"row\"> <div class=\"col-md partItemLeft\"> "
+                                        $("#pl").append(html)
                                     }
 
                                     else if (x%2==1){
-                                        $("#pl").append("<div class=\"col-md partItemRight\">")
+                                        var html= "<div class=\"col-md partItemRight\">"
+                                        $("#pl").append(html)
                                     }
                                 </script>
                                     <div class="card participationcard" style="width: 25rem;">
@@ -145,11 +148,11 @@
             </div>
                     
 
-                    <a class="carousel-control-prev" href="#pinnedlistingscarousel" role="button" data-slide="prev">
+                    <a class="carousel-control-prev" href="#participationlistingscarousel" role="button" data-slide="prev">
                       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                       <span class="sr-only">Previous</span>
                     </a>
-                    <a class="carousel-control-next" href="#pinnedlistingscarousel" role="button" data-slide="next">
+                    <a class="carousel-control-next" href="#participationlistingscarousel" role="button" data-slide="next">
                       <span class="carousel-control-next-icon" aria-hidden="true"></span>
                       <span class="sr-only">Next</span>
                     </a>
@@ -170,15 +173,20 @@
                                 {{#each nlisting}}
                                 <script> 
                                     if (x%2==0 && j==0){
-                                        $("#nl").append("<div class=\"carousel-item active\"> <div class=\"row\"> <div class=\"col-md partItemLeft\">")
+                                        var html="<div class=\"carousel-item active\">";
+                                        html+=" <div class=\"row\"> <div class=\"col-md partItemLeft\">";
+                                        $("#nl").append(html)
                                     }
 
                                     else if(x%2==0){
-                                        $("#nl").append("</div> </div> <div class=\"carousel-item\"> <div class=\"row\"> <div class=\"col-md partItemLeft\"> ")
+                                        var html = "</div> </div> <div class=\"carousel-item\">";
+                                        html+=" <div class=\"row\"> <div class=\"col-md partItemLeft\"> ";
+                                        $("#nl").append(html)
                                     }
 
                                     else if (x%2==1){
-                                        $("#nl").append("<div class=\"col-md partItemRight\">")
+                                        var html="<div class=\"col-md partItemRight\">";
+                                        $("#nl").append(html)
                                     }
                                 </script>
                                     <div class="card participationcard" style="width: 25rem;">
