--- a/la sale/views/mylistings.hbs
+++ b/la sale/views/mylistings.hbs
@@ -199,16 +199,14 @@
                                             <a href="listing.html" class="btn btn-secondary btn-block bid"> View</a>  
                                         </div>
                                     </div>
+                                    </div> <!-- For the partItem div-->
                                 <script>
                                     x++;
                                     j++;
                                 </script>
                                 {{/each}}
                                 </div></div> <!-- For the remaining unmatched carousel item and row divs -->
-                    </div>
-                </div>
-            </div>
-                    
+                    </div>             
 
                     <a class="carousel-control-prev" href="#pinnedlistingscarousel" role="button" data-slide="prev">
                       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -219,8 +217,9 @@
                       <span class="sr-only">Next</span>
                     </a>
                   </div>
-          
+            </div>
             <div class="col-md-2"></div>
+        </div>
     </div>
 
 
