--- a/la sale/views/partials/navbar.hbs
+++ b/la sale/views/partials/navbar.hbs
@@ -12,9 +12,19 @@
                 <li class="nav-item">
                 <a class="nav-link" href="/editprofile">profile</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/mylistings">my listings</a>
+
+                <li class="nav-item dropdown">
+                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                         listings
+                     </a>
+                     <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                         <a class="dropdown-item" href="/mylistings">my listings</a>
+                         <a class="dropdown-item" href="#">listing participation</a>
+                         <a class="dropdown-item" href="#">pinnesd listings</a>
+                     </div>
+                    
                 </li>
+              
                 <li class="nav-item">
                     <a class="nav-link" href="/createlisting">create listing</a>
                 </li>
