--- a/la sale/views/partials/navbar.hbs
+++ b/la sale/views/partials/navbar.hbs
@@ -19,8 +19,8 @@
                      </a>
                      <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                          <a class="dropdown-item" href="/mylistings">my listings</a>
-                         <a class="dropdown-item" href="#">listing participation</a>
-                         <a class="dropdown-item" href="#">pinnesd listings</a>
+                         <a class="dropdown-item" href="/pinnedlistings">listing participation</a>
+                         <a class="dropdown-item" href="/listingparticipation">pinnesd listings</a>
                      </div>
                     
                 </li>
