--- a/la sale/views/partials/navbar.hbs
+++ b/la sale/views/partials/navbar.hbs
@@ -20,7 +20,7 @@
                      <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                          <a class="dropdown-item" href="/mylistings">my listings</a>
                          <a class="dropdown-item" href="/pinnedlistings">listing participation</a>
-                         <a class="dropdown-item" href="/listingparticipation">pinnesd listings</a>
+                         <a class="dropdown-item" href="/listingparticipation">pinned listings</a>
                      </div>
                     
                 </li>
