--- a/la sale/views/listingparticipation.hbs
+++ b/la sale/views/listingparticipation.hbs
@@ -15,7 +15,7 @@
 
 
     <div>
-        <div class="container mlistings" id="listings">
+        <div class="container mylistings" id="mylistings">
             <h1 id="my">my.</h1>
             <h1 id="listingparticipation">listing participations.</h1>
             
@@ -38,7 +38,7 @@
                 <script>
                     x++;
                 if(x%2==0){
-                    $("#listings").append("</div> <div class=\"row\"");
+                    $("#mylistings").append("</div> <div class=\"row\"");
                     x=0;
                 }
                 </script>
