--- a/la sale/views/editlisting.hbs
+++ b/la sale/views/editlisting.hbs
@@ -54,6 +54,7 @@
                         <br>
 
                         <button type="button" class="btn btn-secondary btn-block confirmbtn" id="confirm">confirm</button>
+                        <button type="submit" class="btn btn-danger btn-block" formaction="/mylistings" id="delete">delete</button>
                         <p id="msg"> </p>
                         
                         
