--- a/la sale/views/mylistings.hbs
+++ b/la sale/views/mylistings.hbs
@@ -75,16 +75,13 @@
                             <p class="card-text" > {{uldescription}} </p>
                             <h6 class="prices"><span> {{ulpricelow}} </span>php - <span> {{ulpricehigh}} </span>php</h6>
                             <div class="row">
-                                <div class="col-md-4">
+                                <div class="col-md-6">
                                     <a href="listing.html" class="btn btn-secondary btn-block bid">View</a> 
                                 </div>
-                                <div class="col-md-4">
-                                    <a href="editlisting.html" class="btn btn-secondary btn-block bid"> Edit</a>  
+                                <div class="col-md-6">
+                                    <a href="/editlisting" class="btn btn-secondary btn-block bid"> Edit</a>  
                                 </div>
-                                <div class="col-md-4">
-                                    <button class="btn btn-secondary btn-block bid delete remove" id="test"> Delete</a>  
-                                </div>
-                            </div>
+                            
                         </div>
                     </div>
                 </div>
