changed my lsitings + style

--- a/la sale/views/styles/mylistings_style.css
+++ b/la sale/views/styles/mylistings_style.css
@@ -11,6 +11,11 @@ body{
     margin-bottom: 500px;
 }
 
+.card-img-top {
+    max-height: 400px;
+    max-width: 400px;
+}
+
 #lasalenav{
     background-color: #DAE9CF;
 }
