--- a/la sale/views/mylistings.hbs
+++ b/la sale/views/mylistings.hbs
@@ -24,9 +24,9 @@
 
             {{#each olisting}}
                     <div class="col-md-6">
-                        <div class="card" style="width: 25rem;">
+                        <div class="card" style="width: 25rem; ">
                             <img src={{{olimg}}} class="card-img-top" alt="product">
-                            <div class="card-body">
+                            <div class="card-body" style="height: 200px">
                                 <h5 class="card-title" > {{olname}} </h5>
                                 <p class="card-text" > {{oldescription}}</p>
                                 <h6 class="prices">highest bidder: @{{olusername}}</h6>
@@ -81,7 +81,7 @@
                                 <div class="col-md-6">
                                     <a href="/editlisting" class="btn btn-secondary btn-block bid"> Edit</a>  
                                 </div>
-                            
+                            </div>
                         </div>
                     </div>
                 </div>
