--- a/la sale/views/userlogin.hbs
+++ b/la sale/views/userlogin.hbs
@@ -40,8 +40,8 @@
                         <div id="signup"> 
                             <h2 class="title">signup.</h2>
                             <br>
-                            <a class="btn btn-secondary btn-block loginbtn" href="signup.html" role="button">become an archer</a>
-                            
+            
+                            <button id="signupsubmit" class="btn btn-secondary btn-block loginbtn">become an archer</button>
                             
                         </div>
                         
