--- a/la sale/views/userlogin.hbs
+++ b/la sale/views/userlogin.hbs
@@ -37,17 +37,18 @@
                         </div>
                         <input type="submit" class="btn btn-secondary btn-block loginbtn" id="submitlogin" value="login">
                         <p id="msg"> </p>
-                        <div id="signup"> 
-                            <h2 class="title">signup.</h2>
-                            <br>
-            
-                            <button id="signupsubmit" class="btn btn-secondary btn-block loginbtn">become an archer</button>
-                            
-                        </div>
+                      
                         
                     </form>
                 </div>
                 <div class="col-md-3"></div>
+            </div>
+            <div class="row">
+                <div id="signup"> 
+                    <h2 class="title">signup.</h2>
+                    <br>
+                    <button id="signupsubmit" class="btn btn-secondary btn-block loginbtn">become an archer</button>
+                </div>
             </div>
 
 
