--- a/la sale/views/userlogin.hbs
+++ b/la sale/views/userlogin.hbs
@@ -25,8 +25,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-3"></div>
-                <div class="col-md-6">
-                    <form id="login" action="/browse" method="GET">
+                <div class="col-md-6" id="login">
+                    <form  action="/browse" method="GET">
                         <h2 class="title">login.</h2>
                         <br>
                         <div class="form-group">
@@ -40,16 +40,17 @@
                       
                         
                     </form>
-                </div>
-                <div class="col-md-3"></div>
-            </div>
-            <div class="row">
+                   
                 <div id="signup"> 
                     <h2 class="title">signup.</h2>
                     <br>
                     <button id="signupsubmit" class="btn btn-secondary btn-block loginbtn">become an archer</button>
                 </div>
+
+                </div>
+                <div class="col-md-3"></div>
             </div>
+            
 
 
             
