--- a/la sale/views/userlogin.hbs
+++ b/la sale/views/userlogin.hbs
@@ -26,7 +26,7 @@
             <div class="row">
                 <div class="col-md-3"></div>
                 <div class="col-md-6" id="login">
-                    <form  action="/" method="GET">
+                    <form  action="/browse" method="GET">
                         <h2 class="title">login.</h2>
                         <br>
                         <div class="form-group">
