--- a/la sale/views/signup.hbs
+++ b/la sale/views/signup.hbs
@@ -60,7 +60,7 @@
                         <br>
 
                         <div class="form-group" id="collegee">
-                            <select class="form-control" id="college" required> 
+                            <select class="form-control" id="college" name="collge"required> 
                                 <option value="" selected>college</option>
                                 <option value="CCS">College of Computer Studies</option>
                                 <option value="COB">College of Business</option>
