--- a/la sale/views/profile.hbs
+++ b/la sale/views/profile.hbs
@@ -124,7 +124,7 @@
                             <div class="card-body">
                                 <h5 class="card-title" >{{name}}</h5>
                                 <p class="card-text" >{{description}}</p>
-                                <h6 class="prices"><span>{{startprice}}</span>php - <span>{{endprice}}</span>php</h6>
+                                <h6 class="prices"><span>{{startPrice}}</span>php - <span>{{buyOutPrice}}</span>php</h6>
                                 <a href="listing.html" class="btn btn-secondary btn-block bid">    bid</a>
                             </div>
                         </div>
