--- a/la sale/views/browselisting.hbs
+++ b/la sale/views/browselisting.hbs
@@ -21,11 +21,11 @@
                 {{#each products}}
                     <div class="col-md-6">
                         <div class="card listingcard" style="width: 25rem;">
-                            <img src={{{photo}}} class="card-img-top" alt="product">
+                            <img src={{{images}}} class="card-img-top" alt="product">
                             <div class="card-body">
                                 <h5 class="card-title" >{{name}}</h5>
                                 <p class="card-text" >{{description}}</p>
-                                <h6 class="prices"><span>{{startprice}}</span>php - <span>{{endprice}}</span>php</h6>
+                                <h6 class="prices"><span>{{startPrice}}</span>php - <span>{{buyOutPrice}}</span>php</h6>
                                 <a href="/listing" class="btn btn-secondary btn-block bid"> bid</a>
                             </div>
                         </div>
