--- a/la sale/views/listingparticipation.hbs
+++ b/la sale/views/listingparticipation.hbs
@@ -25,12 +25,12 @@
             {{#each listing}}
                     <div class="col-md-6">
                         <div class="card" style="width: 25rem;">
-                            <img src={{{plimg}}} class="card-img-top" alt="product">
+                            <img src={{{images}}} class="card-img-top" alt="product">
                             <div class="card-body">
-                                <h5 class="card-title" > {{plname}} </h5>
-                                <p class="card-text" > {{pldescription}} </p>
-                                <h6 class="prices">highest bidder: @{{plusername}} </h6>
-                                <h6 class="prices"><span> {{plprice}} </span>php</h6>
+                                <h5 class="card-title" > {{name}} </h5>
+                                <p class="card-text" > {{description}} </p>
+                                <h6 class="prices">highest bidder: @{{highestBidder}} </h6>
+                                <h6 class="prices"><span> {{highestBid}} </span>php</h6>
                                 <a href="listing.html" class="btn btn-secondary btn-block bid"> View</a>  
                             </div>
                         </div>
