--- a/la sale/views/signup.hbs
+++ b/la sale/views/signup.hbs
@@ -16,7 +16,7 @@
 
     <body id="bodyid">
         <div id="toplogo">
-            <a class="navbar-brand" href="userlogin.html">
+            <a class="navbar-brand" href="/">
                 <img src="assets/logo.png" id="lasalelogo" style="height: 50px;">
             </a>
         </div>
