--- a/la sale/views/userlogin.hbs
+++ b/la sale/views/userlogin.hbs
@@ -17,7 +17,7 @@
 
     <body id="bodyid">
         <div id="toplogo">
-            <a class="navbar-brand" href="userlogin.html">
+            <a class="navbar-brand" href="/">
                 <img src="assets/logo.png" id="lasalelogo" style="height: 50px;">
             </a>
         </div>
@@ -26,7 +26,7 @@
             <div class="row">
                 <div class="col-md-3"></div>
                 <div class="col-md-6" id="login">
-                    <form  action="/userlogin" method="POST">
+                    <form  action="/browse" method="POST">
                         <h2 class="title">login.</h2>
                         <br>
                         <div class="form-group">
