--- a/la sale/views/signup.hbs
+++ b/la sale/views/signup.hbs
@@ -27,7 +27,7 @@
                 <div class="col-md-6" id="content">
                     <h1 id="reg">Register.</h1>
                     <h3>become an archer.</h3>
-                    <form id="signup">
+                    <form id="signup" method="post">
                 
                         <div class="form-group">
                             <input type="text" class="form-control" id="email" name="email" placeholder="dlsu email">
