--- a/la sale/views/signup.hbs
+++ b/la sale/views/signup.hbs
@@ -60,7 +60,7 @@
                         <br>
 
                         <div class="form-group" id="collegee">
-                            <select class="form-control" id="college" name="college"required> 
+                            <select class="form-control" id="college" name="college" required> 
                                 <option value="" selected>college</option>
                                 <option value="CCS">College of Computer Studies</option>
                                 <option value="COB">College of Business</option>
@@ -83,7 +83,7 @@
                             <input type="text" class="form-control" id="idnum" name="idnum" placeholder="id number">
                         </div>
                         <br>
-                        <input type="submit" class="btn btn-secondary btn-block registerbtn" value="register">
+                        <input type="submit" class="btn btn-secondary btn-block registerbtn" value="register" id="register">
 
                         <p id="msg"> </p>
                         
