--- a/la sale/views/signupsuccess.hbs
+++ b/la sale/views/signupsuccess.hbs
@@ -10,21 +10,36 @@
         <!-- BootstrapCDN -->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
         <link rel="stylesheet" type="text/css" href="styles/signup_style.css">
-        
+        <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
         <script src="scripts/signup_script.js"></script>
     </head>
 
-    <body>
-        <div class="container">
-            <div id="message"></div>
-            <h1>Welcome, {{firstname}}</h1>
-            <h3>Sign-up successful</h3>
-            <a><button>Return</button></a>
+    <body id="bodyid">
+        <div id="toplogo">
+            <a class="navbar-brand" href="/">
+                <img src="assets/logo.png" id="lasalelogo" style="height: 50px;">
+            </a>
         </div>
-       
+        
+        <div class="container">
+            <div class="row">
+                <div class="col-md-3"></div>
+                <div class="col-md-6" id="content">
+                    <h1 id="reg">Hola.</h1>
+                    <h3>{{{firstname}}}.</h3>
+                    <h3>Sign up succesful.</h3>
+                    <br> <br>
+                             
+                        <a href="/"><button  class="btn btn-secondary btn-block registerbtn">Return to Login</button></a>
+                        
+                </div>
+                <div class="col-md-3"></div>
+            </div>
+
+        </div>
+
     
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
     </body>
 
