--- a/la sale/views/signupsuccess.hbs
+++ b/la sale/views/signupsuccess.hbs
@@ -26,7 +26,7 @@
                 <div class="col-md-3"></div>
                 <div class="col-md-6" id="content">
                     <h1 id="reg">Hola.</h1>
-                    <h3>{{{firstname}}}.</h3>
+                    <h3>{{firstname}}.</h3>
                     <h3>Sign up succesful.</h3>
                     <br> <br>
                              
