--- a/la sale/views/signupsuccess.hbs
+++ b/la sale/views/signupsuccess.hbs
@@ -25,8 +25,8 @@
             <div class="row">
                 <div class="col-md-3"></div>
                 <div class="col-md-6" id="content">
-                    <h1 id="reg">Hola.</h1>
-                    <h3>{{firstname}}.</h3>
+                    <h1 id="reg">Hola,</h1>
+                    <h1 id="success"> {{firstname}} </h1>
                     <h3>Sign up succesful.</h3>
                     <br> <br>
                              
