--- a/la sale/views/pinnedlistings.hbs
+++ b/la sale/views/pinnedlistings.hbs
@@ -32,6 +32,7 @@
                                 <h6 class="prices">highest bidder: @{{nlusername}} </h6>
                                 <h6 class="prices"><span> {{nlprice}} </span>php</h6>
                                 <a href="listing.html" class="btn btn-secondary btn-block bid"> View</a>  
+                                <button class="btn btn-secondary btn-block bid delete remove" id="test"> Remove Pin</a>  
                             </div>
                         </div>
                     </div>
