added pin listing controller (not yet working)

--- a/la sale/views/createlisting.hbs
+++ b/la sale/views/createlisting.hbs
@@ -25,10 +25,30 @@
                 <div class="col-md-6" id="content">
                     <h1 id="create">create.</h1>
                     <h3>a listing.</h3>
-                    <form id="createlisting">
+                    <form id="createlisting" method="post">
                 
                         <div class="form-group">
                             <input type="text" class="form-control" id="name" name="name" placeholder="Product Name">
+                        </div>
+                        <br>
+
+                        <div class="form-group" id="producttype">
+                            <select class="form-control" id="college" name="college" required> 
+                                <option value="" selected>Product Type</option>
+                                <option value="clothes">clothes</option>
+                                <option value="food">food</option>
+                                <option value="electronics">electronics</option>
+                                <option value="tickets">tickets</option>
+                                <option value="furniture">furniture</option>
+                                <option value="beauty">beauty</option>
+                                <option value="books">books</option>
+                                <option value="hobbies">hobbies</option>
+                                <option value="sports">sports</option>
+                                <option value="accessories">accessories</option>
+                                <option value="media">media</option>
+                                <option value="music">music</option>
+                                <option value="pets">pets</option>
+                            </select>
                         </div>
                         <br>
                         
