--- a/la sale/views/browselisting.hbs
+++ b/la sale/views/browselisting.hbs
@@ -22,7 +22,7 @@
                 {{#each products}}
                     <div class="col-md-6">
                         <div class="card listingcard" style="width: 25rem;">
-                            <img src={{{images}}} class="card-img-top" alt="product">
+                            <img src={{{images.[0]}}} class="card-img-top" alt="product">
                             <div class="card-body">
                                 <h5 class="card-title" >{{name}}</h5>
                                 <p class="card-text" >{{description}}</p>
