--- a/la sale/views/browselisting.hbs
+++ b/la sale/views/browselisting.hbs
@@ -27,7 +27,7 @@
                                 <h5 class="card-title" >{{name}}</h5>
                                 <p class="card-text" >{{description}}</p>
                                 <h6 class="prices"><span>{{startPrice}}</span>php - <span>{{buyOutPrice}}</span>php</h6>
-                                <a href="/listing" class="btn btn-secondary btn-block bid"> bid</a>
+                                <a href="/listing?listingid={{listingid}}" class="btn btn-secondary btn-block bid"> bid</a>
                             </div>
                         </div>
                     </div>
