--- a/la sale/views/browselisting.hbs
+++ b/la sale/views/browselisting.hbs
@@ -28,6 +28,9 @@
                                 <p class="card-text" >{{description}}</p>
                                 <h6 class="prices"><span>{{startPrice}}</span>php - <span>{{buyOutPrice}}</span>php</h6>
                                 <a href="/listing?listingid={{listingid}}" class="btn btn-secondary btn-block bid"> bid</a>
+                                <script>
+                                    console.log(listingid)
+                                </script>
                             </div>
                         </div>
                     </div>
