--- a/la sale/views/listing.hbs
+++ b/la sale/views/listing.hbs
@@ -44,7 +44,7 @@
 			<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
 				<div class="carousel-inner" id="x">
 					<script> var x=0;</script>
-					{{#each photo}}
+					{{#each photos}}
 						<script>
 
 							if(x==0) {
