--- a/la sale/views/listing.hbs
+++ b/la sale/views/listing.hbs
@@ -41,34 +41,31 @@
 		<!-- Carousel -->
 		<div class="row">
 			<div class="col">
-			<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-				<div class="carousel-inner" id="x">
-					<script> var x=0;</script>
-					{{#each photos}}
-						<script>
+				<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+					<div class="carousel-inner objfit" id="x">
+						<script> var x=0;</script>
+						{{#each photos}}
+							<script>
 
-							if(x==0) {
-								$("#x").append("<div class=\"carousel-item active\"> <img src={{{img}}} class=\"d-block w-100\" alt=\"...\">");
-							}
-							else {
-								$("#x").append("<div class=\"carousel-item\"> <img src={{{img}}} class=\"d-block w-100\" alt=\"...\">");
-							}
-								$("#x").append("</div>");
-							x++;
-						</script>
-						
-						
-			
-					{{/each}}
-				</div>
-				<a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-					<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-					<span class="sr-only">Previous</span>
-				</a>
-				<a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-					<span class="carousel-control-next-icon" aria-hidden="true"></span>
-					<span class="sr-only">Next</span>
-				</a>
+								if(x==0) {
+									$("#x").append("<div class=\"carousel-item active\"> <img src={{{img}}} class=\"d-block w-100\" alt=\"...\">");
+								}
+								else {
+									$("#x").append("<div class=\"carousel-item\"> <img src={{{img}}} class=\"d-block w-100\" alt=\"...\">");
+								}
+									$("#x").append("</div>");
+								x++;
+							</script>
+						{{/each}}
+					</div>
+					<a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+						<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+						<span class="sr-only">Previous</span>
+					</a>
+					<a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+						<span class="carousel-control-next-icon" aria-hidden="true"></span>
+						<span class="sr-only">Next</span>
+					</a>
 				</div>
 			</div>
 		</div>
