--- a/la sale/views/listing.hbs
+++ b/la sale/views/listing.hbs
@@ -30,7 +30,7 @@
 			<div class="col-md">
 				<p><span id="typelabel">product type:</span> <span id="producttype"> {{producttype}} </span></p>
 			</div>
-			<a href="profile.html">
+			<a href="/profile?username={{username}}">
 				<div class="col-md" id="userhandle">
 					<img src= {{{userpic}}} id="userpic">
 					<p id="username"> @{{username}} </p>
