--- a/la sale/views/styles/profile_style.css
+++ b/la sale/views/styles/profile_style.css
@@ -18,6 +18,7 @@ body{
 
 #profilepic{
     height: 650px;
+    width: 650px;
     position: absolute;
     margin-top: -150px;
     margin-left: -230px;
