--- a/la sale/views/editprofile.hbs
+++ b/la sale/views/editprofile.hbs
@@ -19,7 +19,7 @@
             <div class="row">
                 <div class="col-md-5"> 
                     <!-- Profile Picture goes here -->
-                    <img src={{{imgsrc}}} class="rounded-circle" id="profilepic">
+                    <img src={{{img}}} class="rounded-circle" id="profilepic">
                 </div>
                 <div class="col-md-7" id="textdetails">
                     <div class="row">
