editted edit profile

--- a/la sale/views/editprofile.hbs
+++ b/la sale/views/editprofile.hbs
@@ -75,7 +75,7 @@
         <div class="row">
             <div class="col-md-3"></div>
             <div class="col-md-6" id="content">
-                <form class="form-group">
+                <form class="form-group" method="post">
                     <div class="form-group form-c">
                         <label for="images">Upload Profile Picture:</label>
                         <input type="file" id="profilepici" name="profilepici" >
@@ -109,7 +109,7 @@
                     <div class="form-group">
                         <textarea class="form-control" rows="5" id="abouti" name="abouti" placeholder="About"></textarea>
                     </div> <br>
-                    <input type="button" class="btn btn-secondary btn-block savebtn" value="Save Changes">
+                    <input type="submit" class="btn btn-secondary btn-block savebtn" value="Save Changes">
                     <p id="msg"> </p>
                 </form>
             </div>
