--- a/la sale/views/editprofile.hbs
+++ b/la sale/views/editprofile.hbs
@@ -25,7 +25,8 @@
                     <div class="row">
                         <!-- Name -->
                         <div class="col-md">
-                            <h1 id="name">{{name}}</h1>
+                              <h1 class="name">{{firstname}}</h1>
+                              <h1 class="name">{{lastname}}</h1>
                         </div>
                     </div>
                     <div class="row">
