--- a/la sale/views/listingparticipation.hbs
+++ b/la sale/views/listingparticipation.hbs
@@ -25,7 +25,7 @@
             {{#each listing}}
                     <div class="col-md-6">
                         <div class="card" style="width: 25rem;">
-                            <img src={{{images}}} class="card-img-top" alt="product">
+                            <img src={{{images.[0]}}} class="card-img-top" alt="product">
                             <div class="card-body">
                                 <h5 class="card-title" > {{name}} </h5>
                                 <p class="card-text" > {{description}} </p>
