--- a/la sale/views/pinnedlistings.hbs
+++ b/la sale/views/pinnedlistings.hbs
@@ -31,7 +31,7 @@
                                 <p class="card-text" > {{description}} </p>
                                 <h6 class="prices">highest bidder: @{{highestBidder}} </h6>
                                 <h6 class="prices"><span> {{highestBid}} </span>php</h6>
-                                <a href="listing.html" class="btn btn-secondary btn-block bid"> View</a>  
+                                <a href="/listing?listingid={{_id}}" class="btn btn-secondary btn-block bid"> View</a>  
                                 <button class="btn btn-secondary btn-block bid delete remove" id="test"> Remove Pin</a>  
                             </div>
                         </div>
