--- a/la sale/views/profile.hbs
+++ b/la sale/views/profile.hbs
@@ -30,7 +30,8 @@
                       <div class="row">
                           <!-- Name -->
                           <div class="col-md">
-                              <h1 id="name">{{name}}</h1>
+                              <h1 class="name">{{firstname}}</h1>
+                              <h1 class="name">{{lastname}}</h1>
                           </div>
                       </div>
                       <div class="row">
@@ -44,7 +45,7 @@
                       <div class="row">
                         
                         <div class="col-md"  id="buttons">
-                            <span><a class="btn btn-secondary btn-sm" href="messages.html" id="message" name="message"><i class="far fa-envelope"></i> </a> </span>
+                            <span><a class="btn btn-secondary btn-sm" href="messages" id="message" name="message"><i class="far fa-envelope"></i> </a> </span>
                             <button type="button" class="btn btn-secondary btn-sm" id="rate" name="rate" data-toggle="collapse" data-target="#collapserating" aria-expanded="false" aria-controls="collapserating"><i class="fas fa-percentage"></i></button>
                             
     
@@ -125,7 +126,7 @@
                                 <h5 class="card-title" >{{name}}</h5>
                                 <p class="card-text" >{{description}}</p>
                                 <h6 class="prices"><span>{{startPrice}}</span>php - <span>{{buyOutPrice}}</span>php</h6>
-                                <a href="listing.html" class="btn btn-secondary btn-block bid">    bid</a>
+                                <a href="/listing?listingid={{_id}}" class="btn btn-secondary btn-block bid">    bid</a>
                             </div>
                         </div>
                     </div>
