--- a/la sale/views/styles/listing_style.css
+++ b/la sale/views/styles/listing_style.css
@@ -44,6 +44,9 @@ body {
     float: right;
     margin-right: 10px;
     height: 50px;
+    width: 50px;
+    border-radius: 50%;
+    object-fit: cover;
 }
 
 #productdesc {
