--- a/la sale/views/styles/mylistings_style.css
+++ b/la sale/views/styles/mylistings_style.css
@@ -33,7 +33,7 @@ body{
     border: 0px;
     color: #DAE9CF;
     margin-top: 10px;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
     display: inline-block;
     min-height: 495px;
 }
@@ -48,6 +48,8 @@ body{
 
 .card-img-top {
     padding: 20px;
+    height: 350px;
+    object-fit: cover;
 }
 
 .card-button {
