--- a/la sale/views/styles/profile_style.css
+++ b/la sale/views/styles/profile_style.css
@@ -120,10 +120,11 @@ body{
     color: #454545;
 }
 
-#name {
+.name {
     font-family: lobster;
     font-size: 80px;
     margin-left: 50px;
+    margin-top: 2px;
     /* text-align: center; */
 }
 
@@ -157,6 +158,7 @@ body{
     background-color: #454545;
     border: 0px;
     color: #DAE9CF;
+    margin-bottom: 20px;
 }
 
 
@@ -169,6 +171,8 @@ body{
 }
 .card-img-top {
     padding: 20px;
+    height: 350px;
+    object-fit: cover;
 }
 
 .bid {
