--- a/la sale/views/listing.hbs
+++ b/la sale/views/listing.hbs
@@ -13,7 +13,6 @@
 	<link rel="stylesheet" type="text/css" href="scripts/countdown//css/jquery.countdown.css">
 	<script type="text/javascript" src="scripts/countdown/js/jquery.plugin.js"></script>
 	<script type="text/javascript" src="scripts/countdown/js/jquery.countdown.js"></script>
-
 	<script src="scripts/listing_script.js"></script>
 </head>
 <body>
@@ -88,6 +87,18 @@
 
 			<div class="col-md infoval" >
 			<p id="pricerangeval"><span id="lb"> {{lowrange}}</span> - <span id="ub"> {{highrange}}</span></p>
+			</div>
+		</div>
+
+		<div class="row info">
+			<div class="col-md">
+				<h2 class="leftinfo">ends on</h2>
+			</div>
+			<div class="col-md infoval">
+				<p>
+					<span id="year">{{endDate.year}}</span>-<span id="month">{{endDate.month}}</span>-<span id="days">{{endDate.day}}</span> 
+					<span id="hours">{{endDate.hours}}</span>:<span id="minutes">{{endDate.minutes}}</span>
+				</p>
 			</div>
 		</div>
 
