--- a/la sale/views/listing.hbs
+++ b/la sale/views/listing.hbs
@@ -41,16 +41,16 @@
 		<div class="row">
 			<div class="col">
 				<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-					<div class="carousel-inner objfit" id="x">
+					<div class="carousel-inner" id="x">
 						<script> var x=0;</script>
 						{{#each photos}}
 							<script>
 
 								if(x==0) {
-									$("#x").append("<div class=\"carousel-item active\"> <img src={{{img}}} class=\"d-block w-100\" alt=\"...\">");
+									$("#x").append("<div class=\"carousel-item active\"> <img src={{{img}}} class=\"d-block w-100 objfit\" alt=\"...\">");
 								}
 								else {
-									$("#x").append("<div class=\"carousel-item\"> <img src={{{img}}} class=\"d-block w-100\" alt=\"...\">");
+									$("#x").append("<div class=\"carousel-item\"> <img src={{{img}}} class=\"d-block w-100 objfit\" alt=\"...\">");
 								}
 									$("#x").append("</div>");
 								x++;
