--- a/la sale/views/mylistings.hbs
+++ b/la sale/views/mylistings.hbs
@@ -22,12 +22,12 @@
             <div class="row">
                 <script>var x=0;</script>
                 {{!-- ongoing --}}
-                <h1 style="margin-right: 500px">Ongoing Listings</h1>
+                <div class="title"><h1>Ongoing Listings</h1></div>
                 <br>
                 {{#each olisting}} 
                         <div class="col-md-6">
                             <div class="card" style="width: 25rem;">
-                                <img src={{{image}}} class="card-img-top" alt="product">
+                                <img src={{{image.[0]}}} class="card-img-top" alt="product">
                                 <div class="card-body">
                                     <h5 class="card-title" > {{name}} </h5>
                                     <p class="card-text" > {{description}}</p>
@@ -47,11 +47,11 @@
                 {{/each}}
 
                 {{!-- completed --}}
-                <h1>Completed Listings</h1>
+                <div class="title"><h1>Completed Listings</h1></div>
                 {{#each clisting}}
                     <div class="col-md-6">
                         <div class="card" style="width: 25rem;">
-                            <img src={{{images}}} class="card-img-top" alt="product">
+                            <img src={{{images.[0]}}} class="card-img-top" alt="product">
                             <div class="card-body">
                                 <h5 class="card-title" > {{name}} </h5>
                                 <p class="card-text" > {{description}} </p>
@@ -70,36 +70,6 @@
                     </script>
                 {{/each}}
 
-                {{!--new listings --}}
-                <h1>New Listings</h1>
-                {{#each ulisting}}
-                    <div class="col-md-6">
-                        <div class="card" style="width: 25rem;">
-                            <img src={{{images}}} class="card-img-top" alt="product">
-                            <div class="card-body">
-                                <h5 class="card-title" > {{name}}</h5>
-                                <p class="card-text" > {{description}} </p>
-                                <h6 class="prices"><span> {{startPrice}} </span>php - <span> {{buyOutPrice}} </span>php</h6>
-                                <div class="row">
-                                    <div class="col-md-6 card-button">
-                                        <a href="listing.html" class="btn btn-secondary btn-block bid">View</a> 
-                                    </div>
-                                    <div class="col-md-6 card-button">
-                                        <a href="/editlisting" class="btn btn-secondary btn-block bid"> Edit</a>  
-                                    </div>
-                                
-                                </div>
-                            </div>
-                        </div>
-                    <script>
-                        x++;
-                    if(x%2==0){
-                        $("#mylistings").append("</div> <div class=\"row\"");
-                        x=0;
-                    }
-                    </script>
-                    </div>
-                {{/each}}
                 
             </div>
         </div> 
