--- a/la sale/views/styles/mylistings_style.css
+++ b/la sale/views/styles/mylistings_style.css
@@ -134,3 +134,12 @@ body{
     margin-left: 100px;
     background-image: url('https://apufpel.com.br/assets/img/seta_ult.png')
  }
+
+ .title {
+    width: 100vw;
+    position: relative;
+    margin-left: -50vw;
+    height: 100px;
+    margin-top: 100px;
+    left: 50%;
+ }
