edit profile working

--- a/la sale/views/editprofilesuccess.hbs
+++ b/la sale/views/editprofilesuccess.hbs
@@ -2,7 +2,7 @@
 
 <html>
     <head>
-        <title>signup</title>
+        <title>success</title>
 
         
         <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
@@ -25,12 +25,11 @@
             <div class="row">
                 <div class="col-md-3"></div>
                 <div class="col-md-6" id="content">
-                    <h1 id="reg">Hola,</h1>
-                    <h1 id="success"> {{firstname}} </h1>
-                    <h3>Sign up succesful.</h3>
+                    <h1 id="reg">Success.</h1>
+                    <h3>Your profile has been updated.</h3>
                     <br> <br>
                              
-                        <a href="/"><button  class="btn btn-secondary btn-block registerbtn">Return to Login</button></a>
+                        <a href="/editprofile"><button  class="btn btn-secondary btn-block registerbtn">Return to Profile</button></a>
                         
                 </div>
                 <div class="col-md-3"></div>
