--- a/la sale/views/listing.hbs
+++ b/la sale/views/listing.hbs
@@ -10,6 +10,7 @@
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
 
 	<!-- Countdown -->
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 	<link rel="stylesheet" type="text/css" href="scripts/countdown//css/jquery.countdown.css">
 	<script type="text/javascript" src="scripts/countdown/js/jquery.plugin.js"></script>
 	<script type="text/javascript" src="scripts/countdown/js/jquery.countdown.js"></script>
