image file to image link

--- a/la sale/views/editlisting.hbs
+++ b/la sale/views/editlisting.hbs
@@ -42,8 +42,8 @@
                         <br>
 
                         <div class="form-group">
-                            <label for="images">Upload Images:</label>
-                            <input type="file" id="images" name="images" multiple>
+                            <label for="images">Upload Image Link/s:</label>
+                            <input type="text" class="form-control" id="images" name="images" placeholder="Image Link/s">
                         </div>
                         <br>
 
