--- a/la sale/views/editprofile.hbs
+++ b/la sale/views/editprofile.hbs
@@ -78,8 +78,8 @@
             <div class="col-md-6" id="content">
                 <form class="form-group" method="post">
                     <div class="form-group form-c">
-                        <label for="images">Upload Profile Picture:</label>
-                        <input type="file" id="profilepici" name="profilepici">
+                        <label for="images">Upload Profile Picture Link:</label>
+                        <input type="text" class="form-control" id="profilepici" name="profilepici" placeholder="Picture Link">
                     </div>
                     <br>
                     <div class="form-group">
