--- a/la sale/views/createlisting.hbs
+++ b/la sale/views/createlisting.hbs
@@ -90,7 +90,7 @@
                         </div>
                         <br>
 
-                        <button type="button" class="btn btn-secondary btn-block createbtn" id="createbtnn">create</button>
+                        <button type="submit" class="btn btn-secondary btn-block createbtn" id="createbtnn">create</button>
                         <p id="msg"> </p>
                         
                     </form>
