--- a/la sale/views/createlisting.hbs
+++ b/la sale/views/createlisting.hbs
@@ -33,7 +33,7 @@
                         <br>
 
                         <div class="form-group" id="producttype">
-                            <select class="form-control" id="college" name="college" required> 
+                            <select class="form-control" id="type" name="type" required> 
                                 <option value="" selected>Product Type</option>
                                 <option value="clothes">clothes</option>
                                 <option value="food">food</option>
